    - Updated Hungarian by Hajnalka Hegedus. (Closes: #353024)

  [Christian Perrier]
    - Added Macedonian by Georgi Stanojevski
    - Rename the Punjabi translation file name from pa_IN to pa
      to fit a decision taken in -i18n
  [Bill Allombert]
   * FAQ: 
     - Remove paragraph about 'valid sender domain' since popcon.debian.org
       mail-server no more requires it.
     - Add question about converting timestamp to date (Closes:322261).

 -- Bill Allombert <ballombe@debian.org>  Sun, 26 Mar 2006 16:16:12 +0200

popularity-contest (1.32) unstable; urgency=low

  [Petter Reinholdtsen]
  * Add variable mirrorbase to popanal.py, to make it easier to set up
    a new server.
  * Remove listing email as the transport method in the package
    description, and make the description independent of the method
    used.  This reflect the new HTTP transport support. (Closes: #321056)
  * Update the FAQ to better reflect the support for HTTP submissions.
  * popcon-upload-ubuntu: Replace ubuntulinux.org with ubuntu.com.  Patch
    from Colin Watson and Ubuntu.
  * Correct use of 'su' in cron-script.  (Closes: #331438)
  * Make it possible to get popcon to only report using HTTP.  Patch
    from Vagrant Cascadian. (Closes: #325030)
  * Added debian/compat to set debhelper compatibility level to 4, and
    remove debian/conffiles as it is no longer needed.
  * Let popcon-submit.cgi pipe incoming reports through prepop.pl
    instead of saving it directly to disk, to make sure the same
    sanity checks are done for both HTTP and SMTP reports.  Thanks to
    Bill Allombert for pointing out the risks of the old approach.

  [Bill Allombert]
  * Fix server-side scripts to use the Packages.gz files instead of the
    Packages file.

  [Mohammed Adnène Trojette]
  * Translations:
    - Updated Romanian by Eddy Petrisor. (Closes: #323225)
    - Updated Swedish from Daniel Nylander. (Closes: #332710)
    - Updated Tagalog from Eric Pareja. (Closes: #338614)