@@ -15,7 +15,10 @@ popularity-contest (1.33) UNRELEASED; urgency=low
    * FAQ: 
      - Remove paragraph about 'valid sender domain' since popcon.debian.org
        mail-server no more requires it.
-     - Add question about converting timestamp to date (Closes:322261).
+     - Add question about converting timestamp to date (Closes:322261)
+       Thanks Nathan Stratton Treadway.
+   * popcon.pl: switch I/O to UTF-8. As a side effect this fix the indenting
+     (Closes:# 333597). Thanks Gürkan Sengün.
 
  -- Bill Allombert <ballombe@debian.org>  Sun, 26 Mar 2006 16:16:12 +0200
 
